--- a/templates/model.html
+++ b/templates/model.html
@@ -1,10 +1,10 @@
 <ion-modal-view>
-    <div class="modal-btn">
-        <div class="buttons close-modal">
-            <button class="button button-icon ion-close-round" ng-click="closeModal()"></button>
-        </div>
-    </div>
     <ion-content>
+        <div class="modal-btn">
+            <div class="buttons close-modal">
+                <button class="button button-icon ion-close-round" ng-click="closeModal();"></button>
+            </div>
+        </div>
         <div class="modal-cont">
             <div class="cont-modal">
                 <h4>I am Dell Compassador!</h4> Join me in my journey of learning and help me land my first intership.
