--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -24,7 +24,7 @@
             <h5>date</h5> 02-02-15 | 13.55.05
         </div>
         <div class="box-slider">
-            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" does-continue="true" auto-play="3000">
+            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" does-continue="true" auto-play="3000">
                 <ion-slide>
                     <div class="box">
                         <div class="post-cont">
@@ -32,6 +32,22 @@
                                 <div class="item item-text-wrap">
                                     <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h3>
+                                </div>
+                            </div>
+                            <div class="postinfo">
+                                <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
+    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
+                            </div>
+                            <div class="row like-comnt">
+                                <div class=" col tab-items1">
+                                    <a>
+                                        <i class="iicon hrt-icon"></i> 1
+                                    </a>
+                                </div>
+                                <div class="col tab-items2">
+                                    <a>
+                                        <i class="iicon retweet"></i> 1
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -46,6 +62,22 @@
     Link:<a href="">http://bit.ly/myDellrewards</a></h3>
                                 </div>
                             </div>
+                            <div class="postinfo">
+                                <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
+    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
+                            </div>
+                            <div class="row like-comnt">
+                                <div class=" col tab-items1">
+                                    <a>
+                                        <i class="iicon hrt-icon"></i> 1
+                                    </a>
+                                </div>
+                                <div class="col tab-items2">
+                                    <a>
+                                        <i class="iicon retweet"></i> 1
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </ion-slide>
@@ -56,28 +88,28 @@
                                 <div class="item item-text-wrap">
                                     <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h3>
+                                </div>
+                            </div>
+                            <div class="postinfo">
+                                <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
+    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
+                            </div>
+                            <div class="row like-comnt">
+                                <div class=" col tab-items1">
+                                    <a>
+                                        <i class="iicon hrt-icon"></i> 1
+                                    </a>
+                                </div>
+                                <div class="col tab-items2">
+                                    <a>
+                                        <i class="iicon retweet"></i> 1
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </ion-slide>
             </ion-slide-box>
-        </div>
-        <div class="postinfo">
-            <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
-        </div>
-        <div class="row like-comnt">
-            <div class=" col tab-items1">
-                <a>
-                    <i class="iicon hrt-icon"></i> 1
-                </a>
-            </div>
-            <div class="col tab-items2">
-                <a>
-                    <i class="iicon retweet"></i> 1
-                </a>
-            </div>
         </div>
     </ion-content>
 </ion-view>
