--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,63 +12,73 @@
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content class="no-header">
-        <div class="profile-cont" ng-class="shldopens" ng-click="mkopen();">
-            <div class="titlemain">
-                Profile
-                <hr class="vertical-title">
-            </div>
-            <div class="profile-name">
-                <p>Lauren Paul</p>
-            </div>
-            <div class="img-profile">
-                <div class="profile-pic">
-                    <img src="img/profilepic.jpg">
+        <div class="profile-contmainall">
+            <div class="profile-cont" ng-class="shldopens" ng-click="mkopen();">
+                <div class="titlemain">
+                    Profile
+                    <hr class="vertical-title">
                 </div>
-            </div>
-            <div class="profile-contmain">
-                <p class="rank-score">
-                    <span class="ranks">Rank <span class="score"> 1 </span>
-                    <span class="scores"> Score : <span class="score">105</span>
-                </p>
-                <p class="email-gen">
-                    <span class="email-prf">lauren.paul@gmail.com | 
+                <div class="profile-name">
+                    <p>Lauren Paul</p>
+                </div>
+                <div class="img-profile">
+                    <div class="profile-pic">
+                        <img src="img/profilepic.jpg">
+                    </div>
+                </div>
+                <div class="profile-contmain">
+                    <p class="rank-score">
+                        <span class="ranks">Rank <span class="score"> 1 </span>
+                        <span class="scores"> Score : <span class="score">105</span>
+                    </p>
+                    <p class="email-gen">
+                        <span class="email-prf">lauren.paul@gmail.com | 
                     </span> <span class="gend"> female</span>
-                </p>
-                <p class="dob-std">
-                    <span class="dob-prf">dob:</span>
-                    <span class="dob-title">28/04/1987 |</span>
-                    <span class="std"> Studied at IBSR, Mumbai</span>
-                </p>
-                <div class="triangle"></div>
-                <div class="triangle1"></div>
-            </div>
-        </div>
-        <div class="triangle2"></div>
-        <div class="triangle3"></div>
-        <div class="profile-cont1">
+                    </p>
+                    <p class="dob-std">
+                        <span class="dob-prf">dob:</span>
+                        <span class="dob-title">28/04/1987 |</span>
+                        <span class="std"> Studied at IBSR, Mumbai</span>
+                    </p>
+                    <div class="maintriangle">
+                        <div class="tri-grp">
+                            <div class="triangle"></div>
+                            <div class="triangle1"></div>
+                        </div>
+                        <div class="tri-grp1">
+                            <div class="triangle2"></div>
+                            <div class="triangle3"></div>
 
-            <div class="all-profile">
-                <div class="vertical-line"></div>
-                <div class="profile-action">
-                    <p>Action Done</p>
-                    <p class="score">0</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="vertical-line"></div>
-                <div class="profile-remain">
-                    <p>Action Remaining</p>
-                    <p class="score">0</p>
-                </div>
-                <div class="vertical-line"></div>
-                <div class="social-fb">
-                    <i class="iicon ion-fb"></i>
-                    <p>Likes : <span class="like score"> 20 </span>| Comment:<span class="comment score"> 5 </span>
-                    </p>
-                </div>
-                <div class="vertical-line"></div>
-                <div class="social-twit">
-                    <i class="iicon ion-twit"></i>
-                    <p>Favourites : <span class="favourites score"> 7 </span>| Retweet : <span class="Retweet score"> 5 </span>
-                    </p>
+            </div>
+
+            <div class="profile-cont1">
+
+                <div class="all-profile">
+                    <div class="vertical-line"></div>
+                    <div class="profile-action">
+                        <p>Action Done</p>
+                        <p class="score">0</p>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="profile-remain">
+                        <p>Action Remaining</p>
+                        <p class="score">0</p>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="social-fb">
+                        <i class="iicon ion-fb"></i>
+                        <p>Likes : <span class="like score"> 20 </span>| Comment:<span class="comment score"> 5 </span>
+                        </p>
+                    </div>
+                    <div class="vertical-line"></div>
+                    <div class="social-twit">
+                        <i class="iicon ion-twit"></i>
+                        <p>Favourites : <span class="favourites score"> 7 </span>| Retweet : <span class="Retweet score"> 5 </span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
