--- a/templates/postinfofb.html
+++ b/templates/postinfofb.html
@@ -24,11 +24,27 @@
             <h5>date</h5> 02-02-15 | 12.05.05
         </div>
         <div class="box-slider">
-            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="true" does-continue="true" auto-play="3000">
+            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" does-continue="true" auto-play="3000">
                 <ion-slide>
                     <div class="box">
-                        <div class="fbpost">
-                            <img src="img/dellpost.png" alt="">
+                        <div class="box-infofb">
+                            <div class="fbpost">
+                                <img src="img/dellpost.png" alt="">
+                            </div>
+                            <div class="postinfofb">
+                                <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
+                            </div>
+                            <div class="row like-comnt">
+                                <div class="col">
+                                    <i class="iicon hrt-icon"></i>5
+                                </div>
+                                <div class="col">
+                                    <i class="iicon icon-comment"></i>2
+                                </div>
+                                <div class="col">
+                                    <i class="iicon ion-shares"></i>1
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </ion-slide>
@@ -37,30 +53,45 @@
                         <div class="fbpost">
                             <img src="img/dellpost.png" alt="">
                         </div>
+                        <div class="postinfofb">
+                            <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
+                        </div>
+                        <div class="row like-comnt">
+                            <div class="col">
+                                <i class="iicon hrt-icon"></i>5
+                            </div>
+                            <div class="col">
+                                <i class="iicon icon-comment"></i>2
+                            </div>
+                            <div class="col">
+                                <i class="iicon ion-shares"></i>1
+                            </div>
+                        </div>
                     </div>
                 </ion-slide>
                 <ion-slide>
                     <div class="box">
                         <div class="fbpost">
                             <img src="img/dellpost.png" alt="">
+                        </div>
+                        <div class="postinfofb">
+                            <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
+                        </div>
+                        <div class="row like-comnt">
+                            <div class="col">
+                                <i class="iicon hrt-icon"></i>5
+                            </div>
+                            <div class="col">
+                                <i class="iicon icon-comment"></i>2
+                            </div>
+                            <div class="col">
+                                <i class="iicon ion-shares"></i>1
+                            </div>
                         </div>
                     </div>
                 </ion-slide>
             </ion-slide-box>
         </div>
-        <div class="postinfofb">
-            <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.
-        </div>
-            <div class="row like-comnt">
-                <div class="col">
-                    <i class="iicon hrt-icon"></i>5
-                </div>
-                <div class="col">
-                    <i class="iicon icon-comment"></i>2
-                </div>
-                <div class="col">
-                    <i class="iicon ion-shares"></i>1
-                </div>
-        </div>
+
     </ion-content>
 </ion-view>
