--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,19 +27,22 @@
                     </div>
                 </div>
                 <div class="profile-contmain">
-                    <p class="rank-score">
-                        <span class="ranks">Rank <span class="score"> 1 </span>
-                        <span class="scores"> Score : <span class="score">105</span>
-                    </p>
-                    <p class="email-gen">
-                        <span class="email-prf">lauren.paul@gmail.com | 
-                    </span> <span class="gend"> female</span>
-                    </p>
-                    <p class="dob-std">
-                        <span class="dob-prf">dob:</span>
-                        <span class="dob-title">28/04/1987 |</span>
-                        <span class="std"> Studied at IBSR, Mumbai</span>
-                    </p>
+                    <div class="profile-contmain1">
+                        <p class="rank-score">
+                            <span class="ranks">Rank <span class="score"> 1 </span></span>
+                            <span class="scores"> Score : <span class="score">105</span></span>
+                        </p>
+                        <p class="email-gen">
+                            <span class="email-prf">lauren.paul@gmail.com | 
+                    </span>
+                            <span class="gend"> female</span>
+                        </p>
+                        <p class="dob-std">
+                            <span class="dob-prf">dob:</span>
+                            <span class="dob-title">28/04/1987 |</span>
+                            <span class="std"> Studied at IBSR, Mumbai</span>
+                        </p>
+                    </div>
                     <div class="maintriangle">
                         <div class="tri-grp">
                             <div class="triangle"></div>
