--- a/templates/menu.html
+++ b/templates/menu.html
@@ -42,11 +42,11 @@
                     </div>
                     <i class="icon ion-chevron-up"></i>
                     <ion-list class="cls-margin submenu-list">
-                        <ion-item nav-clear menu-close href="#/app/postinfofb" class="menumain">
+                        <ion-item nav-clear menu-close href="#/app/fbpost" class="menumain">
                             <span class="ion-social-facebook tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Facebook</div>
                         </ion-item>
-                        <ion-item nav-clear menu-close href="#/app/postinfo" class="menumain">
+                        <ion-item nav-clear menu-close href="#/app/twitterpost" class="menumain">
                             <span class="ion-social-twitter tac" title="profile" aria-hidden="true"></span>
                             <div class="head-text">Twitter</div>
                         </ion-item>
