--- a/templates/table.html
+++ b/templates/table.html
@@ -57,6 +57,18 @@
             </div>
             <hr class="vertical-blue">
         </div>
+        <div class="row center-main">
+            <div class="col">
+                <button class="button button-small button-positive history">
+                    New Post
+                </button>
+            </div>
+            <div class="col">
+                <button class="button button-small button-positive history">
+                    History
+                </button>
+            </div>
+        </div>
         <div class="table-cont">
             <div class="row">
                 <div class="col">
